--- a/src/styles/booking.scss
+++ b/src/styles/booking.scss
@@ -5,10 +5,31 @@
     }
 
 .seat{
+    display:flex;
     background-color: $available-seat-color;
     width: 20px;
     height: 20px;
+    text-align: center;
+    color: red;
+    &:hover{
+        background-color: $hover-seat-color;
+        transition: 0.2s;
+    }
 
+    img{
+        width: 20px;
+        height: 20px;
+        margin: 0 0 0 0.5em;
+        
+    }
+    .selected{
+        background-color: $selected-seat-color;
+        transition: 0.2s;
+    }
+    .unavailable{
+        background-color: $unavailable-seat-color;
+        transition: 0.2s;
+    }
 }
 .seatPlanCanvas {
     display: grid;
