--- a/src/variables.scss
+++ b/src/variables.scss
@@ -10,6 +10,7 @@ $screen-breakpoint: 750px;
 $available-seat-color: rgb(167, 216, 233);
 $unavailable-seat-color: rgb(255, 0, 0);
 $selected-seat-color: rgb(71, 209, 71);
+$hover-seat-color: rgb(238, 238, 20);
 
 
 //mixin ifall vi vill ändra färg på svg iconer.
