Added ticket to bookingpage

--- a/static/main.css
+++ b/static/main.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -468,10 +469,38 @@ main section img {
   transform: scale(0.99);
 }
 
+.bookingContent {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  width: 863px;
+  padding: 0 15px 15px 15px;
+  margin: 0 auto 3em auto;
+  background-color: #112d4e;
+  color: whitesmoke;
+  text-align: center;
+}
+.bookingContent p {
+  padding: 1em 1em 1em 0;
+  font-size: 1.1em;
+}
+.bookingContent a {
+  text-decoration: none;
+  color: lightskyblue;
+}
+.bookingContent a :hover {
+  text-decoration: underline;
+}
+@media screen and (min-width: 750px) {
+  .bookingContent {
+    width: 1170px;
+  }
+}
+
 .screen {
   width: 65%;
   background-color: crimson;
   font-size: 3em;
+  margin-left: 130px;
 }
 
 .seat {
@@ -481,6 +510,7 @@ main section img {
   height: 20px;
   text-align: center;
   color: red;
+  cursor: pointer;
 }
 .seat:hover {
   background-color: rgb(238, 238, 20);
@@ -493,14 +523,32 @@ main section img {
 }
 
 .selected {
+  display: flex;
   background-color: rgb(71, 209, 71);
   transition: 0.2s;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+.selected img {
+  width: 20px;
+  height: 20px;
+  margin: 0 0 0 0.5em;
 }
 
 .unavailable {
+  display: flex;
   background-color: rgb(255, 0, 0);
   transition: 0.2s;
   color: whitesmoke;
+  cursor: not-allowed;
+  width: 20px;
+  height: 20px;
+}
+.unavailable img {
+  width: 20px;
+  height: 20px;
+  margin: 0 0 0 0.5em;
 }
 
 .seatPlanCanvas {
@@ -514,6 +562,32 @@ main section img {
   .seatPlanCanvas {
     gap: 20px;
   }
+}
+
+.ticketSelector {
+  display: flex;
+}
+.ticketSelector .active {
+  display: flex;
+  width: 200px;
+}
+
+.ticket {
+  background-color: white;
+  width: 100px;
+  height: 40px;
+  margin: 10px;
+  color: black;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.addToCart {
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  background-color: green;
+  margin: 10px;
 }
 
 #ul {
