--- a/src/styles/booking.scss
+++ b/src/styles/booking.scss
@@ -1,7 +1,33 @@
+.bookingContent{
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  width: 863px;
+  padding: 0 15px 15px 15px;
+  margin: 0 auto 3em auto;
+  background-color: $blue-color;
+  color: whitesmoke;
+  text-align: center;
+  p{
+    padding: 1em 1em 1em 0; 
+    font-size: 1.1em;
+  }
+  a{
+    text-decoration: none;
+    color: lightskyblue; 
+    :hover{ 
+    text-decoration: underline;
+  }    
+} 
+@media screen and (min-width: $screen-breakpoint) {
+  width: 1170px;
+  }
+}
+
 .screen{
     width: 65%;
     background-color: crimson;
     font-size: 3em;
+    margin-left: 130px;
     }
 
 .seat{
@@ -62,3 +88,29 @@
       gap: 20px;
     }
 }
+.ticketSelector {
+    display:flex;
+
+    .active{
+        display: flex;
+        width: 200px;
+    }
+}
+.ticket{
+    background-color: white;
+    width: 100px;
+    height: 40px;
+    margin: 10px;
+    color: black;
+    text-align: center;
+    border-radius: 10px;
+
+}
+.addToCart{
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  background-color: green;
+  margin: 10px;
+}
+@import "../variables.scss";  
