Moved fnb-food.scss and updated main.scss

--- a/src/main.scss
+++ b/src/main.scss
@@ -19,4 +19,4 @@ html {
 @import "styles/WholeProgram.scss";
 @import "./styles/about.scss";
 @import "styles/opening.scss";
-@import "styles/pages/fnb-food.scss";
+@import "styles/fnb-food.scss";
