Add email for booking and vegan highlight

--- a/src/styles/fnb-food.scss
+++ b/src/styles/fnb-food.scss
@@ -10,5 +10,15 @@
         h2, p, ul{
             margin: 0.25em 0;
         }
+        &.fnb-book-a-table{
+            font-weight: bold;
+            padding: 3px;
+        }
     
+}
+.food-diet-vegan{
+    color: green;
+}
+.fnb-book-a-table{
+
 }
