Add coloring for anchor element

--- a/src/styles/fnb-food.scss
+++ b/src/styles/fnb-food.scss
@@ -11,14 +11,15 @@
             margin: 0.25em 0;
         }
         &.fnb-book-a-table{
-            font-weight: bold;
+            font-size: 1.3rem;
+            font-weight: 700;
             padding: 3px;
+        }
+        a{
+            color: $blue-color;
         }
     
 }
 .food-diet-vegan{
     color: green;
-}
-.fnb-book-a-table{
-
 }
