Create and style page:  premierFriday

--- a/src/main.scss
+++ b/src/main.scss
@@ -21,3 +21,4 @@ html {
 @import "./styles/about.scss";
 @import "styles/opening.scss";
 @import "styles/fnb-food.scss";
+@import "styles/premiereFriday.scss"
