--- a/static/main.css
+++ b/static/main.css
@@ -750,3 +750,79 @@ main .hyr-oss {
 .food-diet-vegan {
   color: green;
 }
+
+main {
+  width: auto;
+}
+
+.premiereFriday {
+  font-size: 1.5rem;
+  max-width: 1200px;
+  display: inline;
+  background-color: transparent;
+  opacity: 100%;
+  border: 3px solid #112d4e;
+  border-radius: 15px;
+  padding: 1em;
+  box-shadow: 0 0.2em 0.3em black;
+  margin: 1.5em 1em;
+}
+.premiereFriday h2 {
+  font-size: 2em;
+  margin: 0;
+  word-break: break-word;
+}
+.premiereFriday h3 {
+  margin-top: 1em;
+  font-size: 1.2em;
+}
+.premiereFriday p {
+  margin-top: 1em;
+  font-size: 1.2em;
+  margin: 0;
+}
+.premiereFriday figure {
+  margin-top: 1.2em;
+  max-width: 500px;
+}
+.premiereFriday figure img {
+  border-radius: 15px 15px 0px 0px;
+  box-shadow: 0 0.2em 0.3em black;
+}
+.premiereFriday figure figcaption {
+  border-radius: 0px 0px 15px 15px;
+  box-shadow: 0 0.2em 0.3em black;
+  padding: 1em;
+  background-color: #112d4e;
+  color: #dbe2ef;
+}
+
+@media (max-width: 750px) {
+  .premiereFriday {
+    font-size: 1.3rem;
+    align-items: center;
+    border: none;
+    padding: 0;
+    box-shadow: none;
+    width: auto;
+    margin: 1.5em 0em;
+  }
+  .premiereFriday h2,
+  .premiereFriday h3 {
+    margin-left: 1em;
+    margin-right: 1em;
+    text-align: center;
+  }
+  .premiereFriday figure {
+    margin: 0;
+    max-width: 750px;
+    margin-top: 2em;
+    padding: 0em 0.5em 0.5em 1em;
+  }
+  .premiereFriday figure img {
+    width: 100%;
+  }
+  .premiereFriday figure figcaption {
+    max-width: 1000px;
+  }
+}
