--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,19 +19,19 @@
         </div>
         <nav>
             <ul class="main-nav">
-                <a href="pages/openingHours.html">
+                <a href="./openingHours.html">
                     <li>Öppetider & Kontakt</li>
                 </a>
-                <a href="pages/about.html">
+                <a href="./about.html">
                     <li>Om våran biograf</li>
                 </a>
-                <a href="pages/ticket-info.html">
+                <a href="./ticket-info.html">
                     <li>Biljettinfo</li>
                 </a>
-                <a href="pages/newsletter.html">
+                <a href="./ticket-info.html">
                     <li>Nyheter</li>
                 </a>
-                <a href="pages/giftCard.html">
+                <a href="./ticket-info.html">
                     <li>Köp presentkort</li>
                 </a>
                 <section>
