--- a/templates/index.html
+++ b/templates/index.html
@@ -12,26 +12,26 @@
 <body>
     <header class="header">
         <div class="top-header">
-            <a href="index.html">
+            <a href="/">
                 <img class="logotype" src="static/logo-cinema.png" alt="logotype for the cinema" /></a>
             <h1>Lule Northern Lights Cinema</h1>
             <img onclick="hamburger()" id="hamburger-icon" src="static/hamburger-icon.svg" alt="hamburger-icon" />
         </div>
         <nav>
             <ul class="main-nav">
-                <a href="./openingHours.html">
+                <a href="/opening-hours">
                     <li>Öppetider & Kontakt</li>
                 </a>
-                <a href="./about.html">
+                <a href="/about">
                     <li>Om våran biograf</li>
                 </a>
-                <a href="./ticket-info.html">
+                <a href="/ticket-info">
                     <li>Biljettinfo</li>
                 </a>
-                <a href="./ticket-info.html">
+                <a href="/newsletter">
                     <li>Nyheter</li>
                 </a>
-                <a href="./ticket-info.html">
+                <a href="/gift-card">
                     <li>Köp presentkort</li>
                 </a>
                 <section>
