--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="top-header">
-            <a href="../index.html">
+            <a href="/">
                 <img class="logotype" src="../static/logo-cinema.png" alt="logotype for the cinema" /></a>
             <h1>Lule Northern Lights Cinema</h1>
             <img onclick="hamburger()" id="hamburger-icon" src="../static/hamburger-icon.svg" alt="hamburger-icon" />
