--- a/src/styles/movieSite.scss
+++ b/src/styles/movieSite.scss
@@ -36,4 +36,28 @@
 .movie-poster {
     width: 300px;
     height: 500px;
+    margin-bottom: 20px;
+}
+
+.our-movies {
+    font-size: xx-large;
+    padding-bottom: 20px;
+    margin-top: 20px;
+}
+
+.movie-list {
+    list-style-type: none;
+    font-size: xx-large;
+}
+
+.movie-links {
+    padding-bottom: 40px;
+    margin-top: 20px;
+}
+
+.our-movies-title {
+    text-align: center;
+    font-size: 60px;
+    position: relative;
+    top: 38px;
 }
