--- a/templates/home.handlebars
+++ b/templates/home.handlebars
@@ -1,8 +1,7 @@
-Filmer på Bio!
-
-<ul>
+<h1 class="our-movies">Filmer på Bio!</h1>
+<ul class="movie-list">
   {{#each movies}}
-    <li>
+    <li class="movie-links">
       <a href="/movies/{{this.id}}">
         {{this.attributes.title}}
       </a>
