--- a/templates/layouts/main.handlebars
+++ b/templates/layouts/main.handlebars
@@ -4,7 +4,7 @@
   </head>
   <body>
     <header class="header">
-      <h1>The Movie Site</h1>
+      <h1 class="our-movies-title">Våra Filmer</h1>
     </header>
     <main class="content">
       {{{body}}}
