--- a/templates/movie.handlebars
+++ b/templates/movie.handlebars
@@ -1,4 +1,4 @@
-<a href="/">Till startsidan</a>
+<a class="our-movies" href="/">Till startsidan</a>
 <article class="movie-title">
   <h1>{{movie.attributes.title}}</h1>
   <h1 class="movie-intro">{{movie.attributes.intro}}</h1>
