--- a/templates/about.handlebars
+++ b/templates/about.handlebars
@@ -1,5 +1,5 @@
 <main>
-      <section class="about-us">
+      <section class="about-us large">
         <h1 class="about-main-title">Om vår biograf</h1>
         <h2 class="our-history">Vår historia</h2>
         <p class="history-paragraph">
