Revert "Fix git pages"

--- a/src/main.scss
+++ b/src/main.scss
@@ -21,6 +21,4 @@ html {
 @import "./styles/about.scss";
 @import "styles/opening.scss";
 @import "styles/fnb-food.scss";
-@import "styles/premiereFriday.scss";
-@import "styles/movieSite.scss";
-@import "styles/footer-movie-site.scss";
+@import "styles/premiereFriday.scss"
